<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_red_light"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-50dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="314dp"
        android:layout_height="50dp"
        android:text="@string/tvTitle"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="336dp"
        android:layout_height="152dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb4x6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb4x6"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="48dp"
            tools:layout_editor_absoluteY="260dp" />

        <RadioButton
            android:id="@+id/rb5x7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb5x7"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="48dp"
            tools:layout_editor_absoluteY="308dp" />

        <RadioButton
            android:id="@+id/rb8x10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb8x10"
            android:textSize="20sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btCompute"
        android:layout_width="286dp"
        android:layout_height="58dp"
        android:text="@string/btCompute"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.658" />

    <EditText
        android:id="@+id/etday"
        android:layout_width="263dp"
        android:layout_height="86dp"
        android:autofillHints="@string/etday"
        android:ems="10"
        android:hint="@string/etday"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.252" />

    <TextView
        android:id="@+id/tvFinalCost"
        android:layout_width="304dp"
        android:layout_height="80dp"
        android:text="@string/tvFinalCost"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.863" />

    <TextView
        android:id="@+id/tvTitle2"
        android:layout_width="236dp"
        android:layout_height="31dp"
        android:text="@string/tvTitle2"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.383" />


</androidx.constraintlayout.widget.ConstraintLayout>
